# rtsp-sdk

./: .gitignore
include/rtsp-common/: common.h
src/client/: rtsp_client.cpp
src/publisher/: rtsp_publisher.cpp
src/rtsp-common/: rtp_packer.cpp  rtsp_request.cpp  sdp.cpp  socket.cpp
src/server/: rtsp_server.cpp
tests/: CMakeLists.txt  test_integration.cpp  test_publish_server_bridge.cpp
